--- a/Main/0.0 RAG Create.ipynb
+++ b/Main/0.0 RAG Create.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "307a6271",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "import logging\n",
     "from transformers import AutoTokenizer, AutoModel\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "from RAGLibrary import myWidgets, myRAG, checkConstruct, createSchema, faissConvert, embedding"
+    "from RAGLibrary import Widgets, CheckConstruct, CreateSchema, FaissConvert, Embedding"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "widgets_list = myWidgets.create_name_form()"
+    "widgets_list = Widgets.create_name_form()"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkConstruct.print_json(DATA_KEY, torch_path)"
+    "CheckConstruct.print_json(DATA_KEY, torch_path)"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "createSchema.create_schema(json_file_path, schema_ex_path)"
+    "CreateSchema.create_schema(json_file_path, schema_ex_path)"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding.json_embeddings(MERGE, json_file_path, torch_path, schema_ex_path, model, device, DATA_KEY, EMBE_KEY)"
+    "Embedding.json_embeddings(MERGE, json_file_path, torch_path, schema_ex_path, model, device, DATA_KEY, EMBE_KEY)"
    ]
   },
   {
@@ -202,14 +202,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "faissConvert.convert_pt_to_faiss(\n",
+    "FaissConvert.convert_pt_to_faiss(\n",
     "    torch_path=torch_path, \n",
     "    faiss_path=faiss_path, \n",
     "    mapping_path=mapping_path, \n",
-    "    data_path=mapping_data, \n",
+    "    mapping_data=mapping_data, \n",
     "    data_key = DATA_KEY,\n",
     "    nlist = 100, \n",
     "    use_pickle = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec3522b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "from typing import Dict, List\n",
+    "\n",
+    "def generate_synthetic_ground_truth(\n",
+    "    mapping_data: str,\n",
+    "    mapping_path: str,\n",
+    "    output_path: str,\n",
+    "    max_queries: int = 1000\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Tạo ground truth với truy vấn giả từ mapping_data và mapping_path.\n",
+    "    Lưu kết quả vào output_path.\n",
+    "    \n",
+    "    Args:\n",
+    "        mapping_data (str): Đường dẫn đến file JSON chứa văn bản (contents.<index>.Merged_text).\n",
+    "        mapping_path (str): Đường dẫn đến file JSON chứa ánh xạ (contents.<index>.Merged_embedding).\n",
+    "        output_path (str): Đường dẫn để lưu file ground truth JSON.\n",
+    "        max_queries (int): Số lượng truy vấn giả tối đa cần tạo.\n",
+    "    \"\"\"\n",
+    "    # Đọc mapping_data\n",
+    "    with open(mapping_data, 'r', encoding='utf-8') as f:\n",
+    "        data_mapping = json.load(f)\n",
+    "    \n",
+    "    # Đọc mapping_path\n",
+    "    with open(mapping_path, 'r', encoding='utf-8') as f:\n",
+    "        key_to_index = json.load(f)\n",
+    "    \n",
+    "    ground_truth = {}\n",
+    "    query_count = 0\n",
+    "    \n",
+    "    for key, text in data_mapping.items():\n",
+    "        # Chỉ xử lý các khóa Merged_text\n",
+    "        if \"Merged_text\" not in key:\n",
+    "            continue\n",
+    "        \n",
+    "        # Tạo truy vấn giả: Lấy câu đầu tiên\n",
+    "        sentences = re.split(r'[.!?]', text)\n",
+    "        query = sentences[0].strip()[:100]  # Giới hạn độ dài truy vấn\n",
+    "        if not query:\n",
+    "            continue\n",
+    "        \n",
+    "        # Tìm khóa embedding tương ứng\n",
+    "        embedding_key = key.replace(\"Merged_text\", \"Merged_embedding\")\n",
+    "        if embedding_key not in key_to_index:\n",
+    "            continue  # Bỏ qua nếu không có ánh xạ\n",
+    "        \n",
+    "        # Gán key liên quan vào ground truth\n",
+    "        ground_truth[query] = [embedding_key]\n",
+    "        \n",
+    "        query_count += 1\n",
+    "        if query_count >= max_queries:\n",
+    "            break\n",
+    "    \n",
+    "    # Lưu ground truth\n",
+    "    with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "        json.dump(ground_truth, f, ensure_ascii=False, indent=2)\n",
+    "    \n",
+    "    print(f\"Đã tạo ground truth với {query_count} truy vấn, lưu tại: {output_path}\")\n",
+    "\n",
+    "# Tùy chọn: Xử lý tiếng Việt với underthesea (nếu cần từ khóa thay vì câu đầu tiên)\n",
+    "def generate_queries_with_underthesea(text: str, n_keywords: int = 3) -> List[str]:\n",
+    "    from underthesea import word_tokenize\n",
+    "    tokens = word_tokenize(text)\n",
+    "    stop_words = {\"là\", \"của\", \"và\", \"trong\", \"được\"}  # Danh sách stop words cơ bản\n",
+    "    keywords = [t for t in tokens if t not in stop_words][:n_keywords]\n",
+    "    return [\" \".join(keywords)]\n",
+    "\n",
+    "# Ví dụ sử dụng\n",
+    "output_path = \"ground_truth.json\"\n",
+    "generate_synthetic_ground_truth(mapping_data, mapping_path, output_path)"
    ]
   }
  ],
