--- a/Main/0.1. RAG External.ipynb
+++ b/Main/0.1. RAG External.ipynb
@@ -251,7 +251,7 @@
     "            embedd_model=EMBEDD_MODEL,\n",
     "            faiss_path=faiss_path,\n",
     "            mapping_path=mapping_path,\n",
-    "            data_path=mapping_data,\n",
+    "            mapping_data=mapping_data,\n",
     "            device=device,\n",
     "            k=10,\n",
     "            batches = False,\n",
