--- a/Main/0.1. RAG External.ipynb
+++ b/Main/0.1. RAG External.ipynb
@@ -13,7 +13,7 @@
     "from transformers import AutoTokenizer, AutoModel\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from RAGLibrary import Widgets\n",
-    "from RAGLibrary import CheckConstruct, CreateSchema, FaissConvert, Embedding, Search, Rerank, Respond"
+    "from RAGLibrary import CheckConstruct, CreateSchema, FaissConvert, Embedding, Search, Rerank, Respond, F1_Score"
    ]
   },
   {
@@ -112,7 +112,8 @@
     "else: \n",
     "    MERGE = \"no_Merge\"\n",
     "\n",
-    "API_KEY = API_key_val\n",
+    "API_KEY = \"AIzaSyD81vpriaNcvCyGOxy3TRR0w_njxgPJYfE\"\n",
+    "# API_KEY = API_key_val\n",
     "\n",
     "SEARCH_ENGINE = faiss.IndexFlatIP\n",
     "\n",
@@ -295,6 +296,123 @@
     "    except KeyboardInterrupt:\n",
     "        print(\"\\nChatbot: Goodbye!\")\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"\"\" MAIN \"\"\"\n",
+    "\n",
+    "# with open(f\"Prompts/Docs_Prompt.txt\", \"r\", encoding=\"utf-8\") as file1:\n",
+    "#     docs_prompt = file1.read()\n",
+    "\n",
+    "# with open(f\"Prompts/Natr_Prompt.txt\", \"r\", encoding=\"utf-8\") as file2:\n",
+    "#     natr_prompt = file2.read()\n",
+    "\n",
+    "# qa_pairs_path = \"qa_pairs.json\"\n",
+    "\n",
+    "# print(\"<< Enter 'exit', 'quit', 'escape', 'bye' or Press ESC to exit >>\")\n",
+    "# print(\"Chatbot: Hello there! I'm here to help you!\")\n",
+    "\n",
+    "# user_input = \"Quy định về đào tạo đại học tại trường Thủ đô Hà Nội\"\n",
+    "\n",
+    "# while True:\n",
+    "#     try:\n",
+    "#         user_question = Embedding.preprocess_text(user_input)\n",
+    "#         if user_input.strip().lower() in [\"exit\", \"quit\", \"escape\", \"bye\", \"\"]:\n",
+    "#             print(\"Chatbot: Goodbye!\")\n",
+    "#             break\n",
+    "\n",
+    "#         print(f\"Query: {user_question}\")\n",
+    "\n",
+    "#         # Bước 1: Search\n",
+    "#         preliminary_results = Search.search_faiss_index(\n",
+    "#             query=user_question,\n",
+    "#             embedd_model=EMBEDD_MODEL,\n",
+    "#             faiss_path=faiss_path,\n",
+    "#             mapping_path=mapping_path,\n",
+    "#             mapping_data=mapping_data,\n",
+    "#             device=device,\n",
+    "#             k=10,\n",
+    "#             batches=False,\n",
+    "#         )\n",
+    "#         print(preliminary_results)\n",
+    "\n",
+    "#         # Bước 2: Rerank\n",
+    "#         reranked_results = Rerank.rerank_results(\n",
+    "#             query=user_question,\n",
+    "#             results=preliminary_results,\n",
+    "#             reranker_model=RERANK_MODEL,\n",
+    "#             device=device,\n",
+    "#             k=5,\n",
+    "#             batches=False,\n",
+    "#         )\n",
+    "#         print(reranked_results)\n",
+    "\n",
+    "#         if reranked_results:\n",
+    "#             system_prompt = docs_prompt\n",
+    "#             doc = True\n",
+    "#         else:\n",
+    "#             system_prompt = natr_prompt\n",
+    "#             doc = False\n",
+    "\n",
+    "#         # Bước 3: Tạo qa_pairs từ reranked_results\n",
+    "#         qa_pairs = F1_Score.generate_qa_pairs_from_results(\n",
+    "#             results=reranked_results,\n",
+    "#             qa_pairs_path=qa_pairs_path,\n",
+    "#             gemini_api_key=API_KEY,\n",
+    "#             system_prompt=docs_prompt\n",
+    "#         )\n",
+    "\n",
+    "#         # Bước 4: Generate Response\n",
+    "#         response, filtered_results = Respond.respond_naturally(\n",
+    "#             user_question=user_question,\n",
+    "#             results=reranked_results,\n",
+    "#             system_prompt=system_prompt,\n",
+    "#             responser_model=RESPON_MODEL,\n",
+    "#             score_threshold=0.85,\n",
+    "#             max_results=3,\n",
+    "#             doc=doc,\n",
+    "#             gemini_api_key=API_KEY,\n",
+    "#         )\n",
+    "\n",
+    "#         print(f\"\\nYou: {user_question}\")\n",
+    "#         print(f\"Chatbot: {response}\")\n",
+    "\n",
+    "#         # Bước 5: Tính F1 score\n",
+    "#         if response and \"Lỗi\" not in response and reranked_results:\n",
+    "#             top_result_key = reranked_results[0][\"key\"]\n",
+    "#             reference_qa = qa_pairs.get(top_result_key, [])\n",
+    "#             if reference_qa:\n",
+    "#                 best_f1 = 0.0\n",
+    "#                 best_reference = \"\"\n",
+    "#                 for qa in reference_qa:\n",
+    "#                     qa_question = qa[\"question\"]\n",
+    "#                     qa_answer = qa[\"answer\"]\n",
+    "#                     question_f1 = F1_Score.calculate_f1_score(user_question, qa_question)\n",
+    "#                     if question_f1 > 0.5:  # Ngưỡng để chọn câu hỏi tương tự\n",
+    "#                         f1 = F1_Score.calculate_f1_score(response, qa_answer)\n",
+    "#                         if f1 > best_f1:\n",
+    "#                             best_f1 = f1\n",
+    "#                             best_reference = qa_answer\n",
+    "#                 if best_f1 > 0:\n",
+    "#                     print(f\"Reference Answer: {best_reference}\")\n",
+    "#                     print(f\"F1 Score: {best_f1:.4f}\")\n",
+    "#                 else:\n",
+    "#                     print(\"Không tìm thấy câu trả lời tham chiếu phù hợp.\")\n",
+    "#             else:\n",
+    "#                 print(\"Không có câu trả lời tham chiếu cho chunk này.\")\n",
+    "#         else:\n",
+    "#             print(\"Không tính F1 do lỗi API hoặc không có kết quả rerank.\")\n",
+    "\n",
+    "#         user_input = \"exit\"\n",
+    "\n",
+    "#     except KeyboardInterrupt:\n",
+    "#         print(\"\\nChatbot: Goodbye!\")\n",
+    "#         break"
    ]
   }
  ],
