--- a/Main/0.1. RAG External.ipynb
+++ b/Main/0.1. RAG External.ipynb
@@ -112,8 +112,7 @@
     "else: \n",
     "    MERGE = \"no_Merge\"\n",
     "\n",
-    "API_KEY = \"AIzaSyD81vpriaNcvCyGOxy3TRR0w_njxgPJYfE\"\n",
-    "# API_KEY = API_key_val\n",
+    "API_KEY = API_key_val\n",
     "\n",
     "SEARCH_ENGINE = faiss.IndexFlatIP\n",
     "\n",
